[package]
name = "buzzle"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]
edition = "2018"

[dependencies]
chessground = { git = "https://github.com/antoyo/rust-chessground" }
encoding_rs = "0.8.17"
encoding_rs_io = "0.1.6"
gdk = "0.12.0"
gtk = "0.8.0"
pgn-reader = { git = "https://github.com/niklasf/rust-pgn-reader" }
relm = "0.19.0"
relm-derive = "0.19.0"
shakmaty = "0.16.3"

[patch.crates-io]
shakmaty = { git = "https://github.com/antoyo/shakmaty" }
